# http2-grpc-haskell

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  shell.nix
bazel/: haskell_deps.bzl  http2_grpc_haskell_workspace_deps.bzl
examples/: BUILD.bazel  Main.hs
examples/client/: BUILD.bazel  GrpcClientExample.hs
examples/proto/: BUILD.bazel  example.proto
examples/server/: BUILD.bazel  GrpcServerExample.hs
grpc-client/: BUILD.bazel  README.md
grpc-client/src/Network/GRPC/: Client.hs
grpc-client/src/Network/GRPC/Client/: Helpers.hs
grpc-proto-lens/: BUILD.bazel  README.md
grpc-proto-lens/src/Network/GRPC/HTTP2/: ProtoLens.hs
grpc-server/: BUILD.bazel  README.md
grpc-server/src/Network/GRPC/: Server.hs
grpc-server/src/Network/GRPC/Server/: Handlers.hs  Helpers.hs  Wai.hs
grpc-types/: BUILD.bazel  README.md
grpc-types/src/Network/GRPC/HTTP2/: Api.hs  Encoding.hs  Types.hs
http2-client-grpc/: BUILD.bazel
http2-client-grpc/src/Network/GRPC/: Client.hs
http2-client-grpc/src/Network/GRPC/Client/: Helpers.hs
http2-grpc-proto-lens/: BUILD.bazel
http2-grpc-types/: BUILD.bazel
http2-grpc-types/src/Network/GRPC/HTTP2/: Encoding.hs  Types.hs
nixpkgs/: bazelEnvStdInputs.nix  default.nix
warp-grpc/: BUILD.bazel
warp-grpc/src/Network/GRPC/: Server.hs
warp-grpc/src/Network/GRPC/Server/: Handlers.hs  Wai.hs
