load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
    name = "grpc_client",
    srcs = glob(["src/**/*.hs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//grpc-types:grpc_types",
        "@http2",
        "@http2-client//:http2-client",
        "@stackage//:async",
        "@stackage//:base",
        "@stackage//:binary",
        "@stackage//:bytestring",
        "@stackage//:case-insensitive",
        "@stackage//:data-default-class",
        "@stackage//:lifted-async",
        "@stackage//:lifted-base",
        "@stackage//:text",
        "@stackage//:tls",
    ],
)
