load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "grpc_proto_lens",
  srcs = glob(["src/**/*.hs"]),
  deps = [
    "//grpc-types:grpc_types",
    "@stackage//:base",
    "@stackage//:binary",
    "@stackage//:bytestring",
    "@stackage//:case-insensitive",
    "@stackage//:proto-lens",
    "@stackage//:zlib",
  ],
  visibility = ["//visibility:public"],
)
