load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "grpc_server",
  srcs = glob(["src/**/*.hs"]),
  deps = [
    "//grpc-types:grpc_types",
    "@http2//:http2",
    "@stackage//:async",
    "@stackage//:base",
    "@stackage//:binary",
    "@stackage//:bytestring",
    "@stackage//:case-insensitive",
    "@stackage//:http-types",
    "@stackage//:wai",
    "@stackage//:warp",
    "@stackage//:warp-tls",
  ],
  visibility = ["//visibility:public"],
)
