load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "http2_client_grpc",
  srcs = glob(["src/**/*.hs"]),
  version = "0.8.0.0",
  deps = [
    "//http2-grpc-types:http2_grpc_types",
    "@http2-client//:http2-client",
    "@http2//:http2",
    "@stackage//:async",
    "@stackage//:base",
    "@stackage//:binary",
    "@stackage//:bytestring",
    "@stackage//:case-insensitive",
    "@stackage//:data-default-class",
    "@stackage//:lifted-async",
    "@stackage//:lifted-base",
    "@stackage//:text",
    "@stackage//:tls",
  ],
  visibility = ["//visibility:public"],
)
