load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "http2_grpc_types",
  srcs = glob(["src/**/*.hs"]),
  version = "0.5.0.0",
  deps = [
    "@stackage//:base",
    "@stackage//:binary",
    "@stackage//:bytestring",
    "@stackage//:case-insensitive",
    "@stackage//:zlib",
  ],
  visibility = ["//visibility:public"],
)
