load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "example_client_lib",
  srcs = [ "GrpcClientExample.hs" ],
  deps = [
    "//examples/proto:example_haskell_proto",
    "//http2-client-grpc:http2_client_grpc",
    "//http2-grpc-types:http2_grpc_types",
    "//http2-grpc-proto-lens:http2_grpc_proto_lens",
    "@http2-client//:http2-client",
    "@stackage//:base",
    "@stackage//:proto-lens",
    "@stackage//:proto-lens-runtime",
  ],
  visibility = ["//visibility:public"],
)
