load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
  name = "example_client_lib",
  srcs = [ "GrpcClientExample.hs" ],
  deps = [
    "//examples/proto:example_haskell_proto",
    "//grpc-client:grpc_client",
    "//grpc-types:grpc_types",
    "//grpc-proto-lens:grpc_proto_lens",
    "@http2-client//:http2-client",
    "@stackage//:base",
    "@stackage//:proto-lens",
    "@stackage//:proto-lens-runtime",
  ],
  visibility = ["//visibility:public"],
)
