load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
    name = "example_server_lib",
    srcs = ["GrpcServerExample.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/proto:example_haskell_proto",
        "//grpc-proto-lens:grpc_proto_lens",
        "//grpc-server:grpc_server",
        "//grpc-types:grpc_types",
        "@stackage//:base",
        "@stackage//:lens-family",
        "@stackage//:lens-family-core",
        "@stackage//:proto-lens",
        "@stackage//:proto-lens-runtime",
        "@stackage//:warp",
        "@stackage//:warp-tls",
    ],
)
